[gd_scene load_steps=7 format=2]

[ext_resource path="res://Font/appleFonts.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Icon/UITexture/Icon_Sqiu.png" type="Texture" id=2]
[ext_resource path="res://Icon/UITexture/Icon_SqiuareTilt.png" type="Texture" id=3]
[ext_resource path="res://Script/TransferNode.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="TransferNode" type="Node2D"]
script = ExtResource( 4 )

[node name="OperationNoteBackground" type="Panel" parent="."]
modulate = Color( 0.545098, 0, 1, 0.490196 )
margin_right = 1280.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OperationNoteKnowledgePanel" type="Panel" parent="."]
self_modulate = Color( 0.545098, 0, 1, 0.294118 )
margin_left = 64.0
margin_top = 24.0
margin_right = 1216.0
margin_bottom = 616.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListTitlePanel" type="Panel" parent="OperationNoteKnowledgePanel"]
self_modulate = Color( 0.545098, 0, 1, 0.0980392 )
margin_left = 24.0
margin_top = 24.0
margin_right = 192.0
margin_bottom = 568.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServiceBtn" type="Button" parent="OperationNoteKnowledgePanel/ListTitlePanel"]
margin_right = 168.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServiceLabel" type="Label" parent="OperationNoteKnowledgePanel/ListTitlePanel/ServiceBtn"]
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "   服务"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="OperationNoteKnowledgePanel/ListTitlePanel/ServiceBtn"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DocumentBtn" type="Button" parent="OperationNoteKnowledgePanel/ListTitlePanel"]
margin_top = 80.0
margin_right = 168.0
margin_bottom = 144.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DocumentLabel" type="Label" parent="OperationNoteKnowledgePanel/ListTitlePanel/DocumentBtn"]
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "  文档"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="OperationNoteKnowledgePanel/ListTitlePanel/DocumentBtn"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameBtn" type="Button" parent="OperationNoteKnowledgePanel/ListTitlePanel"]
margin_top = 160.0
margin_right = 168.0
margin_bottom = 224.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameLabel" type="Label" parent="OperationNoteKnowledgePanel/ListTitlePanel/GameBtn"]
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "  摸鱼"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="OperationNoteKnowledgePanel/ListTitlePanel/GameBtn"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeBtn" type="Button" parent="OperationNoteKnowledgePanel/ListTitlePanel"]
margin_top = 240.0
margin_right = 168.0
margin_bottom = 304.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeLabel" type="Label" parent="OperationNoteKnowledgePanel/ListTitlePanel/HomeBtn"]
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "  家"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="OperationNoteKnowledgePanel/ListTitlePanel/HomeBtn"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutBtn" type="Button" parent="OperationNoteKnowledgePanel/ListTitlePanel"]
margin_top = 320.0
margin_right = 168.0
margin_bottom = 384.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutLabel" type="Label" parent="OperationNoteKnowledgePanel/ListTitlePanel/AboutBtn"]
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "  关于"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="OperationNoteKnowledgePanel/ListTitlePanel/AboutBtn"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon_Sqiu" type="TextureRect" parent="OperationNoteKnowledgePanel/ListTitlePanel"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListServicePanel" type="Panel" parent="OperationNoteKnowledgePanel"]
self_modulate = Color( 0.545098, 0, 1, 0.0980392 )
margin_left = 192.0
margin_top = 24.0
margin_right = 1128.0
margin_bottom = 568.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListDocumentPanel" type="Panel" parent="OperationNoteKnowledgePanel"]
visible = false
self_modulate = Color( 0.545098, 0, 1, 0.0980392 )
margin_left = 192.0
margin_top = 24.0
margin_right = 1128.0
margin_bottom = 568.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListQuestionPanel" type="Panel" parent="OperationNoteKnowledgePanel"]
visible = false
self_modulate = Color( 0.545098, 0, 1, 0.0980392 )
margin_left = 192.0
margin_top = 24.0
margin_right = 1128.0
margin_bottom = 568.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListAboutPanel" type="Panel" parent="OperationNoteKnowledgePanel"]
visible = false
self_modulate = Color( 0.545098, 0, 1, 0.0980392 )
margin_left = 192.0
margin_top = 24.0
margin_right = 1128.0
margin_bottom = 568.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListGamePanel" type="Panel" parent="OperationNoteKnowledgePanel"]
visible = false
self_modulate = Color( 0.545098, 0, 1, 0.0980392 )
margin_left = 192.0
margin_top = 24.0
margin_right = 1128.0
margin_bottom = 568.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="OperationNoteKnowledgePanel/ListTitlePanel/ServiceBtn" to="." method="_on_ServiceBtn_pressed"]
[connection signal="pressed" from="OperationNoteKnowledgePanel/ListTitlePanel/DocumentBtn" to="." method="_on_DocumentBtn_pressed"]
[connection signal="pressed" from="OperationNoteKnowledgePanel/ListTitlePanel/GameBtn" to="." method="_on_GameBtn_pressed"]
[connection signal="pressed" from="OperationNoteKnowledgePanel/ListTitlePanel/HomeBtn" to="." method="_on_HomeBtn_pressed"]
[connection signal="pressed" from="OperationNoteKnowledgePanel/ListTitlePanel/AboutBtn" to="." method="_on_AboutBtn_pressed"]
